...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BeachMapsActivity" />

    <TextView
        android:id="@+id/selectView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        android:onClick="selectViewClick"
        android:text="@string/selectMarker"
...
